# jellycell

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  context7.json  context7.md  jellycell.toml.example  pyproject.toml
.claude/: launch.json
.claude/agents/: spec-reviewer.md
.claude/commands/: bump.md  phase-status.md  spec-check.md
.claude/skills/phase-budget/: SKILL.md
.claude/skills/piggyback-first/: SKILL.md
.claude/skills/release-bump/: SKILL.md
.claude/skills/spec-invariant/: SKILL.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml  release.yml
docs/: agent-guide.md  cli-reference.md  conf.py  file-format.md  getting-started.md  index.md  project-layout.md
docs/api/: index.md
docs/development/: adding-commands.md  adding-lint-rules.md  contributing.md  dev-setup.md  preview.md  releasing.md
docs/reference/: architecture.md  contracts.md  index.md
docs/spec/: v0.md
examples/: README.md
examples/demo/: README.md  jellycell.toml
examples/demo/artifacts/: headline.json  summary.json
examples/demo/manuscripts/: README.md  analysis.md  tour.md
examples/demo/notebooks/: tour.py
examples/demo/reports/: index.html  tour.html
examples/demo/site/: index.html  tour.html
examples/large-data/: .gitignore  README.md  jellycell.toml
examples/large-data/data/: seed.json
examples/large-data/manuscripts/: README.md  data-notes.md
examples/large-data/notebooks/: large_data.py
examples/large-data/reports/: index.html  large_data.html
examples/large-data/site/: index.html  large_data.html
examples/minimal/: README.md  jellycell.toml
examples/minimal/manuscripts/: README.md  notes.md
examples/minimal/notebooks/: hello.py
examples/ml-experiment/: README.md  jellycell.toml
examples/ml-experiment/artifacts/: checkpoint.json  metrics.json
examples/ml-experiment/manuscripts/: README.md  model-card.md  train.md
examples/ml-experiment/notebooks/: train.py
examples/ml-experiment/reports/: index.html  train.html
examples/ml-experiment/site/: index.html  train.html
examples/monorepo/: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
examples/monorepo/showcase-churn/: jellycell.toml
examples/monorepo/showcase-churn/artifacts/: retention.json
examples/monorepo/showcase-churn/manuscripts/: journal.md
examples/monorepo/showcase-churn/notebooks/: tour.py
examples/monorepo/showcase-marketing/: jellycell.toml
examples/monorepo/showcase-marketing/artifacts/: summary.json
examples/monorepo/showcase-marketing/manuscripts/: journal.md
examples/monorepo/showcase-marketing/notebooks/: tour.py
examples/paper/: README.md  jellycell.toml
examples/paper/artifacts/: summary.json  totals.json
examples/paper/data/: sample.csv
examples/paper/manuscripts/: README.md  journal.md  paper.md  tearsheet.md
examples/paper/notebooks/: analysis.py
examples/paper/reports/: analysis.html  index.html
examples/paper/site/: analysis.html  index.html
examples/timeseries/: README.md  jellycell.toml
examples/timeseries/artifacts/: daily.parquet  decomposed.parquet  forecast.parquet  report.json  summary.json
examples/timeseries/manuscripts/: 01-explore.md  02-decompose.md  03-forecast.md  README.md  findings.md
examples/timeseries/notebooks/: 01-explore.py  02-decompose.py  03-forecast.py
examples/timeseries/reports/: 01-explore.html  02-decompose.html  03-forecast.html  index.html
scripts/: preview.sh
src/jellycell/: __init__.py  __main__.py  _version.py  api.py  config.py  paths.py
tests/: conftest.py  test_smoke.py
tests/examples/: test_examples_run.py
tests/fixtures/: README.md  sample_notebook.py
tests/integration/: test_api_in_run.py  test_artifact_layout.py  test_artifact_metadata.py  test_checkpoint.py  test_cli_prompt_and_new.py  test_export_ipynb.py  test_export_md.py  test_export_roundtrip.py  test_export_tearsheet.py  test_init.py  test_init_agents_hint.py  test_journal.py  test_json_schemas.py  test_kernel_pool.py  test_kernel_timeout.py  test_prompt_write.py  test_render_index.py  test_render_page.py  test_render_parity.py  test_render_standalone.py  test_run_basic.py  test_run_cached.py  test_run_invalidation.py  test_run_setup_uncached.py  test_server_html_shape.py  test_server_manuscripts.py  test_server_no_disk_writes.py  test_server_routes.py  test_server_sse.py  test_server_sse_e2e.py
tests/unit/: test_api_standalone.py  test_cli_resolution.py  test_config.py  test_format_parse.py  test_format_tags.py  test_function_cache.py  test_hashing.py  test_index.py  test_lint_rules.py  test_manifest.py  test_paths.py  test_pep723.py  test_pep723_overrides.py  test_prompt_agents_md.py  test_prompt_snapshot.py  test_static_deps.py  test_store.py  test_tearsheet.py  test_tearsheets_api.py
(+81 files in other folders)
